--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Evolution
-Theme URI: https://andreas-hecht.com/wordpress-themes/evolution/
+Theme Name: Evolution Framework
+Theme URI: http://demo.andreas-hecht.com/?demo=evolution
 Author: Andreas Hecht
 Author URI: https://andreas-hecht.com
-Description: Evolution is designed to be the fast and secure framework for your next projects, based on WordPress action hooks. Made using mobile-first responsive web design, even when your site is viewed on a smartphone or tablet there will be no negative impact on the beautiful typography.
+Description: The Evolution Framework is designed to be the fast and secure framework for your next projects, based on WordPress action hooks. 
 Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
